# MCP-rag-with-Chromadb

./: README.md  main.py  pyproject.toml  requirements.txt  server.py
chroma_db/: chroma.sqlite3
documents/: CV_CyprianFusi_20251130.docx  Support_Tickets_Analysis_Presentation.pptx
downloads/: IIAG_Comprehensive_Report_2023_v02.docx
troubleshoots/: MCP_FIX.md  MIGRATION_GUIDE.md  OPENAI_REFACTOR.md  OPENAI_SETUP.md  QUICK_FIX.md  TROUBLESHOOTING.md  check_ollama.py  test_embeddings.py
