[project]
name = "6-mcp-rag-with-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.3.5",
    "docx>=0.2.4",
    "fastmcp>=2.13.2",
    "langchain>=1.1.2",
    "langchain-chroma>=1.0.0",
    "langchain-core>=1.1.1",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-ollama>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.4",
    "lxml>=6.0.2",
    "markdown>=3.10",
    "mcp[cli,openai]>=1.23.1",
    "odfpy>=1.4.1",
    "openpyxl>=3.1.5",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "requests>=2.32.5",
    "streamlit>=1.52.1",
]
